--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,13 @@ out/
 Debug/
 Release/
 
+# Ігноруємо службові файли та компіляційні директорії
+WebApplication_lab/obj/
+WebApplication_lab/bin/
+WebApplication_lab/obj/Debug/
+WebApplication_lab/obj/Debug/net8.0/
+
+
 # 🔹 ASP.NET специфічні файли
 App_Data/
 App_Backup/
