--- a/WebApplication_lab/appsettings.json
+++ b/WebApplication_lab/appsettings.json
@@ -5,6 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "",
+    "TenantId": "9f7988a8-be84-412e-ab60-7e29ad2ebc43",
+    "ClientId": "09b56fe3-82fc-4a89-8026-8e03d368c6b3",
+    "CallbackPath": "/signin-oidc"
+  },
+
   "AllowedHosts": "*",
   "ApplicationInsights": {
     "ConnectionString": "InstrumentationKey=c20b71d6-23fa-4edf-a217-3b8d8be5281b;IngestionEndpoint=https://eastus-8.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus.livediagnostics.monitor.azure.com/;ApplicationId=73d935c1-3801-4b87-a150-d3d5c3c9a33d"
