--- a/WebApplication_lab/WebApplication_lab.csproj
+++ b/WebApplication_lab/WebApplication_lab.csproj
@@ -12,11 +12,13 @@
     <PackageReference Include="Azure.AI.TextAnalytics" Version="5.3.0" />
     <PackageReference Include="Azure.AI.Translation.Text" Version="1.0.0" />
     <PackageReference Include="Azure.AI.Vision.Face" Version="1.0.0-beta.2" />
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
+	<PackageReference Include="PdfPig" Version="0.1.10" />
+	<PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
     <PackageReference Include="Azure.Storage.Blobs.Batch" Version="12.21.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.Face" Version="2.8.0-preview.3" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.70.2" />
+    <PackageReference Include="PdfPig" Version="0.1.10" />
   </ItemGroup>
 
 </Project>
